tests/ui/invalid_operation_id.stderr
error: Invalid operation ID 'get-user-by-id'
       help: operation IDs must contain only alphanumeric characters and underscores
       note: valid examples: 'getUserById', 'create_user', 'deleteItem123'
 --> tests/ui/invalid_operation_id.rs:8:1
  |
8 | /// @id get-user-by-id
  | ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `axum::response::Json`
 --> tests/ui/invalid_operation_id.rs:3:5
  |
3 | use axum::response::Json;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
