tests/ui/invalid_operation_id.rs
use aide::axum::IntoApiResponse;
use axum::response::Json;
use rovo::rovo;

/// Test handler with invalid operation ID
///
/// @id get-user-by-id
/// @response 200 Json<String> Success
#[rovo]
async fn test_handler() -> impl IntoApiResponse {
    Json("test".to_string())
}

fn main() {}
